@@ -27,9 +27,11 @@ title: Changelog
 [[v0.30.1]]
 == 0.30.1 (TBD)
 
-icon:check[] Java Rest Client: Fixed a bug in the MeshRestClient#isOneOf helper function.
+icon:plus[] GraphQL: nodes can now be loaded via a list of UUIDs.
 
 icon:plus[] OrientDB: The included OrientDB version has been updated to version 3.0.15
+
+icon:check[] Java Rest Client: Fixed a bug in the MeshRestClient#isOneOf helper function.
 
 [[v0.30.0]]
 == 0.30.0 (12.02.2019)
